New features: 1. Clear cache since last 10 minutes 2. Clear cache since last half hour

--- a/popup.html
+++ b/popup.html
@@ -16,6 +16,8 @@
 		<div class="container span4">
 				<label for="Clear">Clear since</label>
 				<select  id="since" name="since">
+					<option value="ten_minutes">The last 10 mins</option>
+					<option value="half_hour">A half Hour</option>
 					<option value="hour">A Hour</option>
 					<option value="day">A Day</option>
 					<option value="week">A Week</option>
