fix options labels

--- a/popup.html
+++ b/popup.html
@@ -16,11 +16,11 @@
 				<label class="top-buffer" for="Clear">Clear since</label>
 				<select  id="since" name="since">
 					<option value="ten_minutes">The last 10 mins</option>
-					<option value="half_hour">A half Hour</option>
-					<option value="hour">A Hour</option>
-					<option value="day">A Day</option>
-					<option value="week">A Week</option>
-					<option value="month">A Month</option>
+					<option value="half_hour">The last half Hour</option>
+					<option value="hour">The last Hour</option>
+					<option value="day">The last Day</option>
+					<option value="week">The last Week</option>
+					<option value="month">The last Month</option>
 					<option value="ever">Ever</option>
 				</select>
 				<br/>
