--- a/popup.html
+++ b/popup.html
@@ -4,28 +4,124 @@
 		<title>Cache Cleaner</title>
 		<!--	 CSS -->
 		<link rel="stylesheet" href="static/css/style.css">
-		<link href="/static/css/bootstrap.min.css" rel="stylesheet">
-		<!-- JS -->
 		<script src="static/js/jquery.min.js"></script>
-		<script src="static/js/bootstrap.min.js"></script>
 		<script src="popup.js"></script>
+		<script src="static/js/our.js"></script>
+        <style type="text/css">
+            .bouton
+            {
+                color:#0000ff;
+                font-size:24px;
+                cursor:pointer;
+            }
+            .bouton:hover
+            {
+                text-decoration:underline;
+            }
+            .texte
+            {
+                border:1px solid #333333;
+                background:#eeeeee;
+                padding:10px;
+                color:#333333;
+            }
+            .texte:hover
+            {
+                border:1px solid #000000;
+                background:#cccccc;
+                color:#000000;
+            }
+        </style>
 	</head>		
 	<body>
-		<div class="container span4">
-			<form class="text-center">
-				<label class="top-buffer" for="Clear">Clear since</label>
-				<select  id="since" name="since">
-					<option value="ten_minutes">The last 10 mins</option>
-					<option value="half_hour">The last half Hour</option>
-					<option value="hour">The last Hour</option>
-					<option value="day">The last Day</option>
-					<option value="week">The last Week</option>
-					<option value="month">The last Month</option>
-					<option value="ever">Ever</option>
-				</select>
-				<br/>
-				<button class="btn btn-danger btn-xs center-block top-buffer" id="submit" type="button">Clear Cache</button>
-			</form>
-		</div>
+        <div id="container">
+            <div id="options"> 
+                 <img src="static/img/options.jpg" id="bouton_container">
+            </div>
+            <form class="text-center">
+                <label class="title" for="title">Smart Cache Cleaner</label>
+                <div class="inputs">
+                    <input class="days" type="text" value="00" />
+                    <input class="hours" type="text" value="00" />
+                    <input class="min" type="text" value="01" />
+                    <input class="sec" type="text" value="00"/>
+                </div>
+                <div class="txt_input">
+                    <label id="txt_days" for="txt_days">Days</label>
+                    <label id="txt_hours" for="txt_hours">Hours</label>
+                    <label id="txt_min" for="txt_min">Min</label>
+                    <label id="txt_sec" for="txt_sec">Sec</label>
+                </div>
+                <button  id="submit" type="button">Done</button>
+            </form>
+        </div>
+        <div id="container_options">
+            <div id="options">
+                <img src="static/img/options.jpg" id="bouton_container">
+            </div>
+            <label class="title" for="title">Smart Cache Cleaner</label>
+            <div class="flags">
+                <img class="fr" src="static/img/flags/fr.jpg" onclick="changer(1);" />
+                <img class="en" src="static/img/flags/en.jpg" onclick="changer(2);" />
+                <img class="chi" src="static/img/flags/chi.jpg" onclick="changer(3);" />
+                <img class="por" src="static/img/flags/por.jpg" onclick="changer(4);" />
+                <img class="all" src="static/img/flags/all.jpg" onclick="changer(5);" />
+                <img class="esp" src="static/img/flags/esp.jpg" onclick="changer(6);" />
+            </div>
+            <div class="checkbox">
+                <div id="checkbox_left">
+                    <label>
+                        <input id="cache" type="checkbox" name="cache" value="cache"> <p>Cache</p>
+                    </label>
+                    <br />
+                    <label>
+                        <input type="checkbox" name="appcache" value="appcache"> <p id="appcache">AppCache</p>
+                    </label>
+                    <br />
+                    <label>
+                        <input type="checkbox" name="cache" value="cookies"> <p id="cookies">Cookies</p>
+                    </label>
+                    <br />
+                    <label>
+                        <input type="checkbox" name="appcache" value="websql"> <p id="websql">WebSQL</p>
+                    </label>
+                    <br />
+                    <label>
+                        <input type="checkbox" name="cache" value="indexdb"> <p id="indexdb">IndexDB</p>
+                    </label>
+                    <br />
+                    <label>
+                        <input type="checkbox" name="appcache" value="formdata"> <p id="formdata">FormData</p>
+                    </label>
+                </div>
+                <div class="checkbox_right">
+                    <label>
+                        <input type="checkbox" name="cache" value="filesystems"> <p id="filesystems">FileSystems</p>
+                    </label>
+                    <br />
+                    <label>
+                        <input type="checkbox" name="appcache" value="localstorage"> <p id="localstorage">LocalStorage</p>
+                    </label>
+                    <br />
+                    <label>
+                        <input type="checkbox" name="cache" value="plugindata"> <p id="plugindata">PluginData</p>
+                    </label>
+                    <br />
+                    <label>
+                        <input type="checkbox" name="appcache" value="download"> <p id="download">Download</p>
+                    </label>
+                    <br />
+                    <label>
+                        <input type="checkbox" name="cache" value="history"> <p id="history">History</p>
+                    </label>
+                    <br />
+                    <label>
+                        <input type="checkbox" name="appcache" value="passwords"> <p id="passwords">Passwords</p>
+                    </label>
+                </div>
+            </div>
+        </div>
 	</body>
 </html>
+
+
