getting inputs values, fixing css

--- a/popup.html
+++ b/popup.html
@@ -16,10 +16,10 @@
             <form class="text-center">
                 <label class="title" for="title">Smart Cache Cleaner</label>
                 <div class="inputs">
-                    <input class="days" type="text" value="365" />
-                    <input class="hours" type="text" value="24" />
-                    <input class="min" type="text" value="60" />
-                    <input class="sec" type="text" value="60"/>
+                    <input class="days" type="text" value="365" maxlength="3" />
+                    <input class="hours" type="text" value="24" maxlength="2" />
+                    <input class="min" type="text" value="60"  maxlength="2" />
+                    <input class="sec" type="text" value="60" maxlength="2"/>
                 </div>
                 <div class="txt_input">
                     <label id="txt_days" for="txt_days">Days</label>
