updates #1 : translation kind of ok from en to fr

--- a/popup.html
+++ b/popup.html
@@ -74,12 +74,12 @@
                 <p id="title_name">Smart Cache Cleaner</p>
             </div>
             <div class="flags">
-                <img class="fr" src="static/img/flags/fr.jpg" onclick="changer(1);" />
-                <img class="en" src="static/img/flags/en.jpg" onclick="changer(2);" />
-                <img class="chi" src="static/img/flags/chi.jpg" onclick="changer(3);" />
-                <img class="por" src="static/img/flags/por.jpg" onclick="changer(4);" />
-                <img class="all" src="static/img/flags/all.jpg" onclick="changer(5);" />
-                <img class="esp" src="static/img/flags/esp.jpg" onclick="changer(6);" />
+                <img id="fr" src="static/img/flags/fr.jpg" />
+                <img id="en" src="static/img/flags/en.jpg" />
+                <img id="chi" src="static/img/flags/chi.jpg" />
+                <img id="por" src="static/img/flags/por.jpg" />
+                <img id="ger" src="static/img/flags/all.jpg" />
+                <img id="spa" src="static/img/flags/esp.jpg" />
             </div>
             <div class="checkbox">
                 <div id="checkbox_left">
