updates #1 :fix password stuff

--- a/popup.html
+++ b/popup.html
@@ -129,7 +129,7 @@
                     </label>
                     <br />
                     <label>
-                        <input id="passwords" type="checkbox" name="passwords" value="passwords"> <p id="passwords">Passwords</p>
+                        <input id="passwords" type="checkbox" name="passwords" value="passwords"> <p id="txt_passwords">Passwords</p>
                     </label>
                 </div>
             </div>
