#6 Add name convention txt_ + add txt_ label id on input from options page

--- a/popup.html
+++ b/popup.html
@@ -48,14 +48,14 @@
                 <div class="checkboxs_cache">
                     <div>
                          <label>
-                            <input id="all-cache" type="checkbox" name="all-cache" value="all-cache"> <span id="all-cache-p">Tous types de caches</span>
+                            <input id="all-cache" type="checkbox" name="all-cache" value="all-cache"> <span id="txt_all-cache">Tous types de caches</span>
                         </label>
                     </div>
                 </div>
                 <div class="checkboxs_time">
                     <div>
                          <label>
-                            <input id="all-time" type="checkbox" name="all-time" value="all-time"> <span id="all-time-p">Sans durée de temps</span>
+                            <input id="all-time" type="checkbox" name="all-time" value="all-time"> <span id="txt_all-time">Sans durée de temps</span>
                         </label>
                     </div>
                 </div>
@@ -84,48 +84,48 @@
             <div class="checkbox">
                 <div id="checkbox_left">
                     <label>
-                        <input id="cache" type="checkbox" name="cache" value="cache"> <p >Cache</p>
+                        <input id="cache" type="checkbox" name="cache" value="cache"><p id="txt_cache">Cache</p>
                     </label>
                     <br />
                     <label>
-                        <input id="appcache" type="checkbox" name="appcache" value="appcache"> <p >AppCache</p>
+                        <input id="appcache" type="checkbox" name="appcache" value="appcache"><p id="txt_appcache">AppCache</p>
                     </label>
                     <br />
                     <label>
-                        <input id="cookies" type="checkbox" name="cookies" value="cookies"> <p >Cookies</p>
+                        <input id="cookies" type="checkbox" name="cookies" value="cookies"><p id="txt_cookies">Cookies</p>
                     </label>
                     <br />
                     <label>
-                        <input id="websql" type="checkbox" name="websql" value="websql"> <p >WebSQL</p>
+                        <input id="websql" type="checkbox" name="websql" value="websql"><p id="txt_websql">WebSQL</p>
                     </label>
                     <br />
                     <label>
-                        <input id="indexdb" type="checkbox" name="indexdb" value="indexdb"> <p >IndexDB</p>
+                        <input id="indexdb" type="checkbox" name="indexdb" value="indexdb"><p id="txt_indexdb">IndexDB</p>
                     </label>
                     <br />
                     <label>
-                        <input id="formdata" type="checkbox" name="formdata" value="formdata"> <p >FormData</p>
+                        <input id="formdata" type="checkbox" name="formdata" value="formdata"><p id="txt_formdata">FormData</p>
                     </label>
                 </div>
                 <div class="checkbox_right">
                     <label>
-                        <input id="filesystems" type="checkbox" name="filesystems" value="filesystems"> <p >FileSystems</p>
+                        <input id="filesystems" type="checkbox" name="filesystems" value="filesystems"><p id="txt_filesystems">FileSystems</p>
                     </label>
                     <br />
                     <label>
-                        <input id="localstorage" type="checkbox" name="localstorage" value="localstorage"> <p >LocalStorage</p>
+                        <input id="localstorage" type="checkbox" name="localstorage" value="localstorage"><p id="txt_localstorage">LocalStorage</p>
                     </label>
                     <br />
                     <label>
-                        <input id="plugindata" type="checkbox" name="plugindata" value="plugindata"> <p >PluginData</p>
+                        <input id="plugindata" type="checkbox" name="plugindata" value="plugindata"><p id="txt_plugindata">PluginData</p>
                     </label>
                     <br />
                     <label>
-                        <input id="download" type="checkbox" name="download" value="download"> <p >Download</p>
+                        <input id="download" type="checkbox" name="download" value="download"><p id="txt_download">Download</p>
                     </label>
                     <br />
                     <label>
-                        <input id="history" type="checkbox" name="history" value="history"> <p >History</p>
+                        <input id="history" type="checkbox" name="history" value="history"><p id="txt_history">History</p>
                     </label>
                     <br />
                     <label>
