fix some issues

--- a/popup.html
+++ b/popup.html
@@ -96,32 +96,32 @@
                     </label>
                     <br />
                     <label>
-                        <input id="websql" type="checkbox" name="websql" value="websql"><p id="txt_websql">WebSQL</p>
+                        <input id="websql" type="checkbox" name="webSQL" value="websql"><p id="txt_websql">WebSQL</p>
                     </label>
                     <br />
                     <label>
-                        <input id="indexdb" type="checkbox" name="indexdb" value="indexdb"><p id="txt_indexdb">IndexDB</p>
+                        <input id="indexdb" type="checkbox" name="indexedDB" value="indexedb"><p id="txt_indexdb">IndexDB</p>
                     </label>
                     <br />
                     <label>
-                        <input id="formdata" type="checkbox" name="formdata" value="formdata"><p id="txt_formdata">FormData</p>
+                        <input id="formdata" type="checkbox" name="formData" value="formdata"><p id="txt_formdata">FormData</p>
                     </label>
                 </div>
                 <div class="checkbox_right">
                     <label>
-                        <input id="filesystems" type="checkbox" name="filesystems" value="filesystems"><p id="txt_filesystems">FileSystems</p>
+                        <input id="filesystems" type="checkbox" name="fileSystems" value="filesystems"><p id="txt_filesystems">FileSystems</p>
                     </label>
                     <br />
                     <label>
-                        <input id="localstorage" type="checkbox" name="localstorage" value="localstorage"><p id="txt_localstorage">LocalStorage</p>
+                        <input id="localstorage" type="checkbox" name="localStorage" value="localstorage"><p id="txt_localstorage">LocalStorage</p>
                     </label>
                     <br />
                     <label>
-                        <input id="plugindata" type="checkbox" name="plugindata" value="plugindata"><p id="txt_plugindata">PluginData</p>
+                        <input id="plugindata" type="checkbox" name="pluginData" value="plugindata"><p id="txt_plugindata">PluginData</p>
                     </label>
                     <br />
                     <label>
-                        <input id="download" type="checkbox" name="download" value="download"><p id="txt_download">Download</p>
+                        <input id="download" type="checkbox" name="downloads" value="download"><p id="txt_download">Download</p>
                     </label>
                     <br />
                     <label>
