min value added to view and added in the bg

--- a/popup.html
+++ b/popup.html
@@ -23,25 +23,25 @@
                     <div>
                         <p>
                             <label id="txt_days" for="txt_days">Jours</label><br />
-                            <input id="days" name="days" type="text" value="365" maxlength="3" max="365"/>
+                            <input id="days" name="days" type="text" value="365" maxlength="3" max="365" min="000"/>
                         </p>
                     </div>
                     <div>
                         <p>
                              <label id="txt_hours" for="txt_hours">Heures</label><br />
-                            <input id="hours" name="hours" type="text" value="24" maxlength="2" max="23"/>
+                            <input id="hours" name="hours" type="text" value="24" maxlength="2" max="24" min="00"/>
                         </p>
                     </div>
                     <div>
                         <p>
                             <label id="txt_min" for="txt_min">Minutes</label><br />
-                            <input id="min" name="min" type="text" value="60"  maxlength="2" max="60"/>
+                            <input id="min" name="min" type="text" value="60"  maxlength="2" max="60" min="00"/>
                         </p>
                     </div>
                     <div>
                         <p>
                             <label id="txt_sec" for="txt_sec">Secondes</label><br />
-                            <input id="sec" name="sec" type="text" value="60" maxlength="2" max="60"/>
+                            <input id="sec" name="sec" type="text" value="60" maxlength="2" max="60" min="00"/>
                         </p>
                     </div>
                 </div>
