new cool stuff : span added

--- a/popup.html
+++ b/popup.html
@@ -24,24 +24,28 @@
                         <p>
                             <label id="txt_days" for="txt_days">Jours</label><br />
                             <input id="days" name="days" type="text" value="365" maxlength="3" max="365" min="000"/>
+                            <span id="span_days">Depuis combien de jours ?</span>
                         </p>
                     </div>
                     <div>
                         <p>
-                             <label id="txt_hours" for="txt_hours">Heures</label><br />
+                            <label id="txt_hours" for="txt_hours">Heures</label><br />
                             <input id="hours" name="hours" type="text" value="24" maxlength="2" max="24" min="00"/>
+                            <span id="span_hours">Depuis combien d'heures ?</span>
                         </p>
                     </div>
                     <div>
                         <p>
                             <label id="txt_min" for="txt_min">Minutes</label><br />
                             <input id="min" name="min" type="text" value="60"  maxlength="2" max="60" min="00"/>
+                            <span id="span_min">Depuis combien de minutes ?</span>
                         </p>
                     </div>
                     <div>
                         <p>
                             <label id="txt_sec" for="txt_sec">Secondes</label><br />
                             <input id="sec" name="sec" type="text" value="60" maxlength="2" max="60" min="00"/>
+                            <span id="span_sec">Depuis combien de jours ?</span>
                         </p>
                     </div>
                 </div>
