Fix wrong text for span sec

--- a/popup.html
+++ b/popup.html
@@ -45,7 +45,7 @@
                         <p>
                             <label id="txt_sec" for="txt_sec">Secondes</label><br />
                             <input id="sec" name="sec" type="text" value="60" maxlength="2" max="60" min="00"/>
-                            <span id="span_sec">Depuis combien de jours ?</span>
+                            <span id="span_sec">Depuis combien de secondes ?</span>
                         </p>
                     </div>
                 </div>
